// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`determinism of extractColorsFromPixels on synthetic images > color blocks, 3x2 grid, 192x128 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.1667,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 66,
        "y": 66,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 130,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 66,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 2,
        "y": 66,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 128,
    "mode": "perceptual",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > color blocks, 3x2 grid, 192x128 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1667,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 66,
        "y": 66,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 130,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 66,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 2,
        "y": 66,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#f5f5f5",
      "hex8": "#f5f5f5ff",
      "position": {
        "x": 130,
        "y": 66,
      },
      "rank": 6,
      "rgba": [
        245,
        245,
        245,
        255,
      ],
      "score": 1,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "perceptual",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > color blocks, 3x2 grid, 192x128 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1667,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 66,
        "y": 66,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 130,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 66,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 2,
        "y": 66,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1667,
      "hex": "#f5f5f5",
      "hex8": "#f5f5f5ff",
      "position": {
        "x": 130,
        "y": 66,
      },
      "rank": 6,
      "rgba": [
        245,
        245,
        245,
        255,
      ],
      "score": 1,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "population",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > color noise, seed 7, 128x128 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.0233,
      "hex": "#59db43",
      "hex8": "#59db43ff",
      "position": {
        "x": 9,
        "y": 28,
      },
      "rank": 1,
      "rgba": [
        89,
        219,
        67,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0225,
      "hex": "#5cf346",
      "hex8": "#5cf346ff",
      "position": {
        "x": 113,
        "y": 32,
      },
      "rank": 2,
      "rgba": [
        92,
        243,
        70,
        255,
      ],
      "score": 0.9685,
    },
    {
      "coverage": 0.0222,
      "hex": "#a82722",
      "hex8": "#a82722ff",
      "position": {
        "x": 9,
        "y": 44,
      },
      "rank": 3,
      "rgba": [
        168,
        39,
        34,
        255,
      ],
      "score": 0.9554,
    },
    {
      "coverage": 0.022,
      "hex": "#e42b2a",
      "hex8": "#e42b2aff",
      "position": {
        "x": 119,
        "y": 74,
      },
      "rank": 4,
      "rgba": [
        228,
        43,
        42,
        255,
      ],
      "score": 0.9449,
    },
    {
      "coverage": 0.0208,
      "hex": "#4cac3d",
      "hex8": "#4cac3dff",
      "position": {
        "x": 38,
        "y": 114,
      },
      "rank": 5,
      "rgba": [
        76,
        172,
        61,
        255,
      ],
      "score": 0.895,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 128,
    "mode": "perceptual",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > color noise, seed 7, 128x128 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0233,
      "hex": "#59db43",
      "hex8": "#59db43ff",
      "position": {
        "x": 9,
        "y": 28,
      },
      "rank": 1,
      "rgba": [
        89,
        219,
        67,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0225,
      "hex": "#5cf346",
      "hex8": "#5cf346ff",
      "position": {
        "x": 113,
        "y": 32,
      },
      "rank": 2,
      "rgba": [
        92,
        243,
        70,
        255,
      ],
      "score": 0.9685,
    },
    {
      "coverage": 0.0222,
      "hex": "#a82722",
      "hex8": "#a82722ff",
      "position": {
        "x": 9,
        "y": 44,
      },
      "rank": 3,
      "rgba": [
        168,
        39,
        34,
        255,
      ],
      "score": 0.9554,
    },
    {
      "coverage": 0.022,
      "hex": "#e42b2a",
      "hex8": "#e42b2aff",
      "position": {
        "x": 119,
        "y": 74,
      },
      "rank": 4,
      "rgba": [
        228,
        43,
        42,
        255,
      ],
      "score": 0.9449,
    },
    {
      "coverage": 0.0208,
      "hex": "#4cac3d",
      "hex8": "#4cac3dff",
      "position": {
        "x": 38,
        "y": 114,
      },
      "rank": 5,
      "rgba": [
        76,
        172,
        61,
        255,
      ],
      "score": 0.895,
    },
    {
      "coverage": 0.0208,
      "hex": "#2b219c",
      "hex8": "#2b219cff",
      "position": {
        "x": 70,
        "y": 110,
      },
      "rank": 6,
      "rgba": [
        43,
        33,
        156,
        255,
      ],
      "score": 0.8924,
    },
    {
      "coverage": 0.0207,
      "hex": "#5cf09e",
      "hex8": "#5cf09eff",
      "position": {
        "x": 87,
        "y": 82,
      },
      "rank": 7,
      "rgba": [
        92,
        240,
        158,
        255,
      ],
      "score": 0.8898,
    },
    {
      "coverage": 0.02,
      "hex": "#2b2adf",
      "hex8": "#2b2adfff",
      "position": {
        "x": 101,
        "y": 25,
      },
      "rank": 8,
      "rgba": [
        43,
        42,
        223,
        255,
      ],
      "score": 0.8609,
    },
    {
      "coverage": 0.02,
      "hex": "#998442",
      "hex8": "#998442ff",
      "position": {
        "x": 66,
        "y": 37,
      },
      "rank": 9,
      "rgba": [
        153,
        132,
        66,
        255,
      ],
      "score": 0.8583,
    },
    {
      "coverage": 0.0199,
      "hex": "#4f8f37",
      "hex8": "#4f8f37ff",
      "position": {
        "x": 16,
        "y": 70,
      },
      "rank": 10,
      "rgba": [
        79,
        143,
        55,
        255,
      ],
      "score": 0.8556,
    },
    {
      "coverage": 0.0189,
      "hex": "#a8a632",
      "hex8": "#a8a632ff",
      "position": {
        "x": 77,
        "y": 104,
      },
      "rank": 11,
      "rgba": [
        168,
        166,
        50,
        255,
      ],
      "score": 0.8136,
    },
    {
      "coverage": 0.0189,
      "hex": "#b1ed40",
      "hex8": "#b1ed40ff",
      "position": {
        "x": 121,
        "y": 122,
      },
      "rank": 12,
      "rgba": [
        177,
        237,
        64,
        255,
      ],
      "score": 0.8136,
    },
    {
      "coverage": 0.0186,
      "hex": "#50cc87",
      "hex8": "#50cc87ff",
      "position": {
        "x": 10,
        "y": 120,
      },
      "rank": 13,
      "rgba": [
        80,
        204,
        135,
        255,
      ],
      "score": 0.8005,
    },
    {
      "coverage": 0.0182,
      "hex": "#42c335",
      "hex8": "#42c335ff",
      "position": {
        "x": 88,
        "y": 84,
      },
      "rank": 14,
      "rgba": [
        66,
        195,
        53,
        255,
      ],
      "score": 0.7848,
    },
    {
      "coverage": 0.0177,
      "hex": "#a8cd45",
      "hex8": "#a8cd45ff",
      "position": {
        "x": 95,
        "y": 38,
      },
      "rank": 15,
      "rgba": [
        168,
        205,
        69,
        255,
      ],
      "score": 0.7612,
    },
    {
      "coverage": 0.0177,
      "hex": "#dd34e3",
      "hex8": "#dd34e3ff",
      "position": {
        "x": 89,
        "y": 103,
      },
      "rank": 16,
      "rgba": [
        221,
        52,
        227,
        255,
      ],
      "score": 0.7612,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "perceptual",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > color noise, seed 7, 128x128 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0233,
      "hex": "#59db43",
      "hex8": "#59db43ff",
      "position": {
        "x": 9,
        "y": 28,
      },
      "rank": 1,
      "rgba": [
        89,
        219,
        67,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0225,
      "hex": "#5cf346",
      "hex8": "#5cf346ff",
      "position": {
        "x": 113,
        "y": 32,
      },
      "rank": 2,
      "rgba": [
        92,
        243,
        70,
        255,
      ],
      "score": 0.9685,
    },
    {
      "coverage": 0.0222,
      "hex": "#a82722",
      "hex8": "#a82722ff",
      "position": {
        "x": 9,
        "y": 44,
      },
      "rank": 3,
      "rgba": [
        168,
        39,
        34,
        255,
      ],
      "score": 0.9554,
    },
    {
      "coverage": 0.022,
      "hex": "#e42b2a",
      "hex8": "#e42b2aff",
      "position": {
        "x": 119,
        "y": 74,
      },
      "rank": 4,
      "rgba": [
        228,
        43,
        42,
        255,
      ],
      "score": 0.9449,
    },
    {
      "coverage": 0.0208,
      "hex": "#4cac3d",
      "hex8": "#4cac3dff",
      "position": {
        "x": 38,
        "y": 114,
      },
      "rank": 5,
      "rgba": [
        76,
        172,
        61,
        255,
      ],
      "score": 0.895,
    },
    {
      "coverage": 0.0208,
      "hex": "#2b219c",
      "hex8": "#2b219cff",
      "position": {
        "x": 70,
        "y": 110,
      },
      "rank": 6,
      "rgba": [
        43,
        33,
        156,
        255,
      ],
      "score": 0.8924,
    },
    {
      "coverage": 0.0207,
      "hex": "#5cf09e",
      "hex8": "#5cf09eff",
      "position": {
        "x": 87,
        "y": 82,
      },
      "rank": 7,
      "rgba": [
        92,
        240,
        158,
        255,
      ],
      "score": 0.8898,
    },
    {
      "coverage": 0.02,
      "hex": "#2b2adf",
      "hex8": "#2b2adfff",
      "position": {
        "x": 101,
        "y": 25,
      },
      "rank": 8,
      "rgba": [
        43,
        42,
        223,
        255,
      ],
      "score": 0.8609,
    },
    {
      "coverage": 0.02,
      "hex": "#998442",
      "hex8": "#998442ff",
      "position": {
        "x": 66,
        "y": 37,
      },
      "rank": 9,
      "rgba": [
        153,
        132,
        66,
        255,
      ],
      "score": 0.8583,
    },
    {
      "coverage": 0.0199,
      "hex": "#4f8f37",
      "hex8": "#4f8f37ff",
      "position": {
        "x": 16,
        "y": 70,
      },
      "rank": 10,
      "rgba": [
        79,
        143,
        55,
        255,
      ],
      "score": 0.8556,
    },
    {
      "coverage": 0.0189,
      "hex": "#a8a632",
      "hex8": "#a8a632ff",
      "position": {
        "x": 77,
        "y": 104,
      },
      "rank": 11,
      "rgba": [
        168,
        166,
        50,
        255,
      ],
      "score": 0.8136,
    },
    {
      "coverage": 0.0189,
      "hex": "#b1ed40",
      "hex8": "#b1ed40ff",
      "position": {
        "x": 121,
        "y": 122,
      },
      "rank": 12,
      "rgba": [
        177,
        237,
        64,
        255,
      ],
      "score": 0.8136,
    },
    {
      "coverage": 0.0186,
      "hex": "#50cc87",
      "hex8": "#50cc87ff",
      "position": {
        "x": 10,
        "y": 120,
      },
      "rank": 13,
      "rgba": [
        80,
        204,
        135,
        255,
      ],
      "score": 0.8005,
    },
    {
      "coverage": 0.0182,
      "hex": "#42c335",
      "hex8": "#42c335ff",
      "position": {
        "x": 88,
        "y": 84,
      },
      "rank": 14,
      "rgba": [
        66,
        195,
        53,
        255,
      ],
      "score": 0.7848,
    },
    {
      "coverage": 0.0177,
      "hex": "#a8cd45",
      "hex8": "#a8cd45ff",
      "position": {
        "x": 95,
        "y": 38,
      },
      "rank": 15,
      "rgba": [
        168,
        205,
        69,
        255,
      ],
      "score": 0.7612,
    },
    {
      "coverage": 0.0177,
      "hex": "#dd34e3",
      "hex8": "#dd34e3ff",
      "position": {
        "x": 89,
        "y": 103,
      },
      "rank": 16,
      "rgba": [
        221,
        52,
        227,
        255,
      ],
      "score": 0.7612,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "population",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > cover: blocks plus gradient with grain, 160x240 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.1,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 2,
        "y": 50,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 82,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 42,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 122,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 240,
    "mode": "perceptual",
    "width": 160,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > cover: blocks plus gradient with grain, 160x240 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 2,
        "y": 50,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 82,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 42,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 122,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#f5f5f5",
      "hex8": "#f5f5f5ff",
      "position": {
        "x": 42,
        "y": 50,
      },
      "rank": 6,
      "rgba": [
        245,
        245,
        245,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0588,
      "hex": "#5ba9b8",
      "hex8": "#5ba9b8ff",
      "position": {
        "x": 4,
        "y": 220,
      },
      "rank": 7,
      "rgba": [
        91,
        169,
        184,
        255,
      ],
      "score": 0.588,
    },
    {
      "coverage": 0.0501,
      "hex": "#3fb0d1",
      "hex8": "#3fb0d1ff",
      "position": {
        "x": 7,
        "y": 233,
      },
      "rank": 8,
      "rgba": [
        63,
        176,
        209,
        255,
      ],
      "score": 0.501,
    },
    {
      "coverage": 0.0488,
      "hex": "#c88855",
      "hex8": "#c88855ff",
      "position": {
        "x": 36,
        "y": 168,
      },
      "rank": 9,
      "rgba": [
        200,
        136,
        85,
        255,
      ],
      "score": 0.4883,
    },
    {
      "coverage": 0.044,
      "hex": "#899a8e",
      "hex8": "#899a8eff",
      "position": {
        "x": 53,
        "y": 198,
      },
      "rank": 10,
      "rgba": [
        137,
        154,
        142,
        255,
      ],
      "score": 0.4396,
    },
    {
      "coverage": 0.0432,
      "hex": "#de8041",
      "hex8": "#de8041ff",
      "position": {
        "x": 28,
        "y": 157,
      },
      "rank": 11,
      "rgba": [
        222,
        128,
        65,
        255,
      ],
      "score": 0.4323,
    },
    {
      "coverage": 0.0417,
      "hex": "#9d937b",
      "hex8": "#9d937bff",
      "position": {
        "x": 31,
        "y": 188,
      },
      "rank": 12,
      "rgba": [
        157,
        147,
        123,
        255,
      ],
      "score": 0.4167,
    },
    {
      "coverage": 0.0412,
      "hex": "#72a0a1",
      "hex8": "#72a0a1ff",
      "position": {
        "x": 3,
        "y": 208,
      },
      "rank": 13,
      "rgba": [
        114,
        160,
        161,
        255,
      ],
      "score": 0.412,
    },
    {
      "coverage": 0.0389,
      "hex": "#b28d68",
      "hex8": "#b28d68ff",
      "position": {
        "x": 13,
        "y": 178,
      },
      "rank": 14,
      "rgba": [
        178,
        141,
        104,
        255,
      ],
      "score": 0.3891,
    },
    {
      "coverage": 0.0333,
      "hex": "#f27b30",
      "hex8": "#f27b30ff",
      "position": {
        "x": 3,
        "y": 148,
      },
      "rank": 15,
      "rgba": [
        242,
        123,
        48,
        255,
      ],
      "score": 0.3331,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 240,
    "mode": "perceptual",
    "width": 160,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > cover: blocks plus gradient with grain, 160x240 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 2,
        "y": 50,
      },
      "rank": 1,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#1e3cc8",
      "hex8": "#1e3cc8ff",
      "position": {
        "x": 82,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        30,
        60,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#28a03c",
      "hex8": "#28a03cff",
      "position": {
        "x": 42,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        40,
        160,
        60,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#dc2828",
      "hex8": "#dc2828ff",
      "position": {
        "x": 2,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        220,
        40,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#f0dc28",
      "hex8": "#f0dc28ff",
      "position": {
        "x": 122,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        240,
        220,
        40,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.1,
      "hex": "#f5f5f5",
      "hex8": "#f5f5f5ff",
      "position": {
        "x": 42,
        "y": 50,
      },
      "rank": 6,
      "rgba": [
        245,
        245,
        245,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0588,
      "hex": "#5ba9b8",
      "hex8": "#5ba9b8ff",
      "position": {
        "x": 4,
        "y": 220,
      },
      "rank": 7,
      "rgba": [
        91,
        169,
        184,
        255,
      ],
      "score": 0.588,
    },
    {
      "coverage": 0.0501,
      "hex": "#3fb0d1",
      "hex8": "#3fb0d1ff",
      "position": {
        "x": 7,
        "y": 233,
      },
      "rank": 8,
      "rgba": [
        63,
        176,
        209,
        255,
      ],
      "score": 0.501,
    },
    {
      "coverage": 0.0488,
      "hex": "#c88855",
      "hex8": "#c88855ff",
      "position": {
        "x": 36,
        "y": 168,
      },
      "rank": 9,
      "rgba": [
        200,
        136,
        85,
        255,
      ],
      "score": 0.4883,
    },
    {
      "coverage": 0.044,
      "hex": "#899a8e",
      "hex8": "#899a8eff",
      "position": {
        "x": 53,
        "y": 198,
      },
      "rank": 10,
      "rgba": [
        137,
        154,
        142,
        255,
      ],
      "score": 0.4396,
    },
    {
      "coverage": 0.0432,
      "hex": "#de8041",
      "hex8": "#de8041ff",
      "position": {
        "x": 28,
        "y": 157,
      },
      "rank": 11,
      "rgba": [
        222,
        128,
        65,
        255,
      ],
      "score": 0.4323,
    },
    {
      "coverage": 0.0417,
      "hex": "#9d937b",
      "hex8": "#9d937bff",
      "position": {
        "x": 31,
        "y": 188,
      },
      "rank": 12,
      "rgba": [
        157,
        147,
        123,
        255,
      ],
      "score": 0.4167,
    },
    {
      "coverage": 0.0412,
      "hex": "#72a0a1",
      "hex8": "#72a0a1ff",
      "position": {
        "x": 3,
        "y": 208,
      },
      "rank": 13,
      "rgba": [
        114,
        160,
        161,
        255,
      ],
      "score": 0.412,
    },
    {
      "coverage": 0.0389,
      "hex": "#b28d68",
      "hex8": "#b28d68ff",
      "position": {
        "x": 13,
        "y": 178,
      },
      "rank": 14,
      "rgba": [
        178,
        141,
        104,
        255,
      ],
      "score": 0.3891,
    },
    {
      "coverage": 0.0333,
      "hex": "#f27b30",
      "hex8": "#f27b30ff",
      "position": {
        "x": 3,
        "y": 148,
      },
      "rank": 15,
      "rgba": [
        242,
        123,
        48,
        255,
      ],
      "score": 0.3331,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 240,
    "mode": "population",
    "width": 160,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > gray noise, seed 8, 128x128 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.0775,
      "hex": "#e9e9e9",
      "hex8": "#e9e9e9ff",
      "position": {
        "x": 43,
        "y": 74,
      },
      "rank": 1,
      "rgba": [
        233,
        233,
        233,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.064,
      "hex": "#6b6b6b",
      "hex8": "#6b6b6bff",
      "position": {
        "x": 55,
        "y": 51,
      },
      "rank": 2,
      "rgba": [
        107,
        107,
        107,
        255,
      ],
      "score": 0.8252,
    },
    {
      "coverage": 0.063,
      "hex": "#989898",
      "hex8": "#989898ff",
      "position": {
        "x": 60,
        "y": 5,
      },
      "rank": 3,
      "rgba": [
        152,
        152,
        152,
        255,
      ],
      "score": 0.8134,
    },
    {
      "coverage": 0.0621,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 108,
        "y": 110,
      },
      "rank": 4,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 0.8016,
    },
    {
      "coverage": 0.0611,
      "hex": "#bcbcbc",
      "hex8": "#bcbcbcff",
      "position": {
        "x": 34,
        "y": 65,
      },
      "rank": 5,
      "rgba": [
        188,
        188,
        188,
        255,
      ],
      "score": 0.7882,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 128,
    "mode": "perceptual",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > gray noise, seed 8, 128x128 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0775,
      "hex": "#e9e9e9",
      "hex8": "#e9e9e9ff",
      "position": {
        "x": 43,
        "y": 74,
      },
      "rank": 1,
      "rgba": [
        233,
        233,
        233,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.064,
      "hex": "#6b6b6b",
      "hex8": "#6b6b6bff",
      "position": {
        "x": 55,
        "y": 51,
      },
      "rank": 2,
      "rgba": [
        107,
        107,
        107,
        255,
      ],
      "score": 0.8252,
    },
    {
      "coverage": 0.063,
      "hex": "#989898",
      "hex8": "#989898ff",
      "position": {
        "x": 60,
        "y": 5,
      },
      "rank": 3,
      "rgba": [
        152,
        152,
        152,
        255,
      ],
      "score": 0.8134,
    },
    {
      "coverage": 0.0621,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 108,
        "y": 110,
      },
      "rank": 4,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 0.8016,
    },
    {
      "coverage": 0.0611,
      "hex": "#bcbcbc",
      "hex8": "#bcbcbcff",
      "position": {
        "x": 34,
        "y": 65,
      },
      "rank": 5,
      "rgba": [
        188,
        188,
        188,
        255,
      ],
      "score": 0.7882,
    },
    {
      "coverage": 0.061,
      "hex": "#cccccc",
      "hex8": "#ccccccff",
      "position": {
        "x": 114,
        "y": 115,
      },
      "rank": 6,
      "rgba": [
        204,
        204,
        204,
        255,
      ],
      "score": 0.7874,
    },
    {
      "coverage": 0.049,
      "hex": "#7a7a7a",
      "hex8": "#7a7a7aff",
      "position": {
        "x": 79,
        "y": 17,
      },
      "rank": 7,
      "rgba": [
        122,
        122,
        122,
        255,
      ],
      "score": 0.6323,
    },
    {
      "coverage": 0.0477,
      "hex": "#2d2d2d",
      "hex8": "#2d2d2dff",
      "position": {
        "x": 99,
        "y": 6,
      },
      "rank": 8,
      "rgba": [
        45,
        45,
        45,
        255,
      ],
      "score": 0.6157,
    },
    {
      "coverage": 0.0477,
      "hex": "#424242",
      "hex8": "#424242ff",
      "position": {
        "x": 97,
        "y": 33,
      },
      "rank": 9,
      "rgba": [
        66,
        66,
        66,
        255,
      ],
      "score": 0.6157,
    },
    {
      "coverage": 0.0471,
      "hex": "#d9d9d9",
      "hex8": "#d9d9d9ff",
      "position": {
        "x": 108,
        "y": 54,
      },
      "rank": 10,
      "rgba": [
        217,
        217,
        217,
        255,
      ],
      "score": 0.6079,
    },
    {
      "coverage": 0.0466,
      "hex": "#a5a5a5",
      "hex8": "#a5a5a5ff",
      "position": {
        "x": 78,
        "y": 4,
      },
      "rank": 11,
      "rgba": [
        165,
        165,
        165,
        255,
      ],
      "score": 0.6008,
    },
    {
      "coverage": 0.0466,
      "hex": "#fafafa",
      "hex8": "#fafafaff",
      "position": {
        "x": 107,
        "y": 29,
      },
      "rank": 12,
      "rgba": [
        250,
        250,
        250,
        255,
      ],
      "score": 0.6008,
    },
    {
      "coverage": 0.0463,
      "hex": "#212121",
      "hex8": "#212121ff",
      "position": {
        "x": 22,
        "y": 39,
      },
      "rank": 13,
      "rgba": [
        33,
        33,
        33,
        255,
      ],
      "score": 0.5969,
    },
    {
      "coverage": 0.0452,
      "hex": "#565656",
      "hex8": "#565656ff",
      "position": {
        "x": 115,
        "y": 40,
      },
      "rank": 14,
      "rgba": [
        86,
        86,
        86,
        255,
      ],
      "score": 0.5835,
    },
    {
      "coverage": 0.0343,
      "hex": "#5f5f5f",
      "hex8": "#5f5f5fff",
      "position": {
        "x": 50,
        "y": 42,
      },
      "rank": 15,
      "rgba": [
        95,
        95,
        95,
        255,
      ],
      "score": 0.4425,
    },
    {
      "coverage": 0.0342,
      "hex": "#4b4b4b",
      "hex8": "#4b4b4bff",
      "position": {
        "x": 35,
        "y": 14,
      },
      "rank": 16,
      "rgba": [
        75,
        75,
        75,
        255,
      ],
      "score": 0.4409,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "perceptual",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > gray noise, seed 8, 128x128 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0775,
      "hex": "#e9e9e9",
      "hex8": "#e9e9e9ff",
      "position": {
        "x": 43,
        "y": 74,
      },
      "rank": 1,
      "rgba": [
        233,
        233,
        233,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.064,
      "hex": "#6b6b6b",
      "hex8": "#6b6b6bff",
      "position": {
        "x": 55,
        "y": 51,
      },
      "rank": 2,
      "rgba": [
        107,
        107,
        107,
        255,
      ],
      "score": 0.8252,
    },
    {
      "coverage": 0.063,
      "hex": "#989898",
      "hex8": "#989898ff",
      "position": {
        "x": 60,
        "y": 5,
      },
      "rank": 3,
      "rgba": [
        152,
        152,
        152,
        255,
      ],
      "score": 0.8134,
    },
    {
      "coverage": 0.0621,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 108,
        "y": 110,
      },
      "rank": 4,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 0.8016,
    },
    {
      "coverage": 0.0611,
      "hex": "#bcbcbc",
      "hex8": "#bcbcbcff",
      "position": {
        "x": 34,
        "y": 65,
      },
      "rank": 5,
      "rgba": [
        188,
        188,
        188,
        255,
      ],
      "score": 0.7882,
    },
    {
      "coverage": 0.061,
      "hex": "#cccccc",
      "hex8": "#ccccccff",
      "position": {
        "x": 114,
        "y": 115,
      },
      "rank": 6,
      "rgba": [
        204,
        204,
        204,
        255,
      ],
      "score": 0.7874,
    },
    {
      "coverage": 0.049,
      "hex": "#7a7a7a",
      "hex8": "#7a7a7aff",
      "position": {
        "x": 79,
        "y": 17,
      },
      "rank": 7,
      "rgba": [
        122,
        122,
        122,
        255,
      ],
      "score": 0.6323,
    },
    {
      "coverage": 0.0477,
      "hex": "#2d2d2d",
      "hex8": "#2d2d2dff",
      "position": {
        "x": 99,
        "y": 6,
      },
      "rank": 8,
      "rgba": [
        45,
        45,
        45,
        255,
      ],
      "score": 0.6157,
    },
    {
      "coverage": 0.0477,
      "hex": "#424242",
      "hex8": "#424242ff",
      "position": {
        "x": 97,
        "y": 33,
      },
      "rank": 9,
      "rgba": [
        66,
        66,
        66,
        255,
      ],
      "score": 0.6157,
    },
    {
      "coverage": 0.0471,
      "hex": "#d9d9d9",
      "hex8": "#d9d9d9ff",
      "position": {
        "x": 108,
        "y": 54,
      },
      "rank": 10,
      "rgba": [
        217,
        217,
        217,
        255,
      ],
      "score": 0.6079,
    },
    {
      "coverage": 0.0466,
      "hex": "#a5a5a5",
      "hex8": "#a5a5a5ff",
      "position": {
        "x": 78,
        "y": 4,
      },
      "rank": 11,
      "rgba": [
        165,
        165,
        165,
        255,
      ],
      "score": 0.6008,
    },
    {
      "coverage": 0.0466,
      "hex": "#fafafa",
      "hex8": "#fafafaff",
      "position": {
        "x": 107,
        "y": 29,
      },
      "rank": 12,
      "rgba": [
        250,
        250,
        250,
        255,
      ],
      "score": 0.6008,
    },
    {
      "coverage": 0.0463,
      "hex": "#212121",
      "hex8": "#212121ff",
      "position": {
        "x": 22,
        "y": 39,
      },
      "rank": 13,
      "rgba": [
        33,
        33,
        33,
        255,
      ],
      "score": 0.5969,
    },
    {
      "coverage": 0.0452,
      "hex": "#565656",
      "hex8": "#565656ff",
      "position": {
        "x": 115,
        "y": 40,
      },
      "rank": 14,
      "rgba": [
        86,
        86,
        86,
        255,
      ],
      "score": 0.5835,
    },
    {
      "coverage": 0.0343,
      "hex": "#5f5f5f",
      "hex8": "#5f5f5fff",
      "position": {
        "x": 50,
        "y": 42,
      },
      "rank": 15,
      "rgba": [
        95,
        95,
        95,
        255,
      ],
      "score": 0.4425,
    },
    {
      "coverage": 0.0342,
      "hex": "#4b4b4b",
      "hex8": "#4b4b4bff",
      "position": {
        "x": 35,
        "y": 14,
      },
      "rank": 16,
      "rgba": [
        75,
        75,
        75,
        255,
      ],
      "score": 0.4409,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "population",
    "width": 128,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, RGB, 256x32 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.1328,
      "hex": "#4d42b0",
      "hex8": "#4d42b0ff",
      "position": {
        "x": 182,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        77,
        66,
        176,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.125,
      "hex": "#d02133",
      "hex8": "#d02133ff",
      "position": {
        "x": 15,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        208,
        33,
        51,
        255,
      ],
      "score": 0.9412,
    },
    {
      "coverage": 0.1211,
      "hex": "#204ddb",
      "hex8": "#204ddbff",
      "position": {
        "x": 240,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        32,
        77,
        219,
        255,
      ],
      "score": 0.9118,
    },
    {
      "coverage": 0.1016,
      "hex": "#86347a",
      "hex8": "#86347aff",
      "position": {
        "x": 110,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        134,
        52,
        122,
        255,
      ],
      "score": 0.7647,
    },
    {
      "coverage": 0.0977,
      "hex": "#3648c6",
      "hex8": "#3648c6ff",
      "position": {
        "x": 212,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        54,
        72,
        198,
        255,
      ],
      "score": 0.7353,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 32,
    "mode": "perceptual",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, RGB, 256x32 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1328,
      "hex": "#4d42b0",
      "hex8": "#4d42b0ff",
      "position": {
        "x": 182,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        77,
        66,
        176,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.125,
      "hex": "#d02133",
      "hex8": "#d02133ff",
      "position": {
        "x": 15,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        208,
        33,
        51,
        255,
      ],
      "score": 0.9412,
    },
    {
      "coverage": 0.1211,
      "hex": "#204ddb",
      "hex8": "#204ddbff",
      "position": {
        "x": 240,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        32,
        77,
        219,
        255,
      ],
      "score": 0.9118,
    },
    {
      "coverage": 0.1016,
      "hex": "#86347a",
      "hex8": "#86347aff",
      "position": {
        "x": 110,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        134,
        52,
        122,
        255,
      ],
      "score": 0.7647,
    },
    {
      "coverage": 0.0977,
      "hex": "#3648c6",
      "hex8": "#3648c6ff",
      "position": {
        "x": 212,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        54,
        72,
        198,
        255,
      ],
      "score": 0.7353,
    },
    {
      "coverage": 0.0898,
      "hex": "#992f68",
      "hex8": "#992f68ff",
      "position": {
        "x": 86,
        "y": 2,
      },
      "rank": 6,
      "rgba": [
        153,
        47,
        104,
        255,
      ],
      "score": 0.6765,
    },
    {
      "coverage": 0.0898,
      "hex": "#ab2a57",
      "hex8": "#ab2a57ff",
      "position": {
        "x": 63,
        "y": 2,
      },
      "rank": 7,
      "rgba": [
        171,
        42,
        87,
        255,
      ],
      "score": 0.6765,
    },
    {
      "coverage": 0.082,
      "hex": "#623d9c",
      "hex8": "#623d9cff",
      "position": {
        "x": 156,
        "y": 2,
      },
      "rank": 8,
      "rgba": [
        98,
        61,
        156,
        255,
      ],
      "score": 0.6176,
    },
    {
      "coverage": 0.082,
      "hex": "#73388c",
      "hex8": "#73388cff",
      "position": {
        "x": 134,
        "y": 2,
      },
      "rank": 9,
      "rgba": [
        115,
        56,
        140,
        255,
      ],
      "score": 0.6176,
    },
    {
      "coverage": 0.0781,
      "hex": "#bb2647",
      "hex8": "#bb2647ff",
      "position": {
        "x": 42,
        "y": 2,
      },
      "rank": 10,
      "rgba": [
        187,
        38,
        71,
        255,
      ],
      "score": 0.5882,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 32,
    "mode": "perceptual",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, RGB, 256x32 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.1328,
      "hex": "#4d42b0",
      "hex8": "#4d42b0ff",
      "position": {
        "x": 182,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        77,
        66,
        176,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.125,
      "hex": "#d02133",
      "hex8": "#d02133ff",
      "position": {
        "x": 15,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        208,
        33,
        51,
        255,
      ],
      "score": 0.9412,
    },
    {
      "coverage": 0.1211,
      "hex": "#204ddb",
      "hex8": "#204ddbff",
      "position": {
        "x": 240,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        32,
        77,
        219,
        255,
      ],
      "score": 0.9118,
    },
    {
      "coverage": 0.1016,
      "hex": "#86347a",
      "hex8": "#86347aff",
      "position": {
        "x": 110,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        134,
        52,
        122,
        255,
      ],
      "score": 0.7647,
    },
    {
      "coverage": 0.0977,
      "hex": "#3648c6",
      "hex8": "#3648c6ff",
      "position": {
        "x": 212,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        54,
        72,
        198,
        255,
      ],
      "score": 0.7353,
    },
    {
      "coverage": 0.0898,
      "hex": "#992f68",
      "hex8": "#992f68ff",
      "position": {
        "x": 86,
        "y": 2,
      },
      "rank": 6,
      "rgba": [
        153,
        47,
        104,
        255,
      ],
      "score": 0.6765,
    },
    {
      "coverage": 0.0898,
      "hex": "#ab2a57",
      "hex8": "#ab2a57ff",
      "position": {
        "x": 63,
        "y": 2,
      },
      "rank": 7,
      "rgba": [
        171,
        42,
        87,
        255,
      ],
      "score": 0.6765,
    },
    {
      "coverage": 0.082,
      "hex": "#623d9c",
      "hex8": "#623d9cff",
      "position": {
        "x": 156,
        "y": 2,
      },
      "rank": 8,
      "rgba": [
        98,
        61,
        156,
        255,
      ],
      "score": 0.6176,
    },
    {
      "coverage": 0.082,
      "hex": "#73388c",
      "hex8": "#73388cff",
      "position": {
        "x": 134,
        "y": 2,
      },
      "rank": 9,
      "rgba": [
        115,
        56,
        140,
        255,
      ],
      "score": 0.6176,
    },
    {
      "coverage": 0.0781,
      "hex": "#bb2647",
      "hex8": "#bb2647ff",
      "position": {
        "x": 42,
        "y": 2,
      },
      "rank": 10,
      "rgba": [
        187,
        38,
        71,
        255,
      ],
      "score": 0.5882,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 32,
    "mode": "population",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, gray, 256x16 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.0625,
      "hex": "#484848",
      "hex8": "#484848ff",
      "position": {
        "x": 72,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        72,
        72,
        72,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#585858",
      "hex8": "#585858ff",
      "position": {
        "x": 88,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        88,
        88,
        88,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#686868",
      "hex8": "#686868ff",
      "position": {
        "x": 104,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        104,
        104,
        104,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#787878",
      "hex8": "#787878ff",
      "position": {
        "x": 120,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        120,
        120,
        120,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 136,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 1,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 16,
    "mode": "perceptual",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, gray, 256x16 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0625,
      "hex": "#484848",
      "hex8": "#484848ff",
      "position": {
        "x": 72,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        72,
        72,
        72,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#585858",
      "hex8": "#585858ff",
      "position": {
        "x": 88,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        88,
        88,
        88,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#686868",
      "hex8": "#686868ff",
      "position": {
        "x": 104,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        104,
        104,
        104,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#787878",
      "hex8": "#787878ff",
      "position": {
        "x": 120,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        120,
        120,
        120,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 136,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#989898",
      "hex8": "#989898ff",
      "position": {
        "x": 152,
        "y": 2,
      },
      "rank": 6,
      "rgba": [
        152,
        152,
        152,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#a8a8a8",
      "hex8": "#a8a8a8ff",
      "position": {
        "x": 168,
        "y": 2,
      },
      "rank": 7,
      "rgba": [
        168,
        168,
        168,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#b8b8b8",
      "hex8": "#b8b8b8ff",
      "position": {
        "x": 184,
        "y": 2,
      },
      "rank": 8,
      "rgba": [
        184,
        184,
        184,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#c8c8c8",
      "hex8": "#c8c8c8ff",
      "position": {
        "x": 200,
        "y": 2,
      },
      "rank": 9,
      "rgba": [
        200,
        200,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#d8d8d8",
      "hex8": "#d8d8d8ff",
      "position": {
        "x": 216,
        "y": 2,
      },
      "rank": 10,
      "rgba": [
        216,
        216,
        216,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#e8e8e8",
      "hex8": "#e8e8e8ff",
      "position": {
        "x": 232,
        "y": 2,
      },
      "rank": 11,
      "rgba": [
        232,
        232,
        232,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#f8f8f8",
      "hex8": "#f8f8f8ff",
      "position": {
        "x": 248,
        "y": 2,
      },
      "rank": 12,
      "rgba": [
        248,
        248,
        248,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0313,
      "hex": "#0c0c0c",
      "hex8": "#0c0c0cff",
      "position": {
        "x": 12,
        "y": 2,
      },
      "rank": 13,
      "rgba": [
        12,
        12,
        12,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 20,
        "y": 2,
      },
      "rank": 14,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#1c1c1c",
      "hex8": "#1c1c1cff",
      "position": {
        "x": 28,
        "y": 2,
      },
      "rank": 15,
      "rgba": [
        28,
        28,
        28,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#242424",
      "hex8": "#242424ff",
      "position": {
        "x": 36,
        "y": 2,
      },
      "rank": 16,
      "rgba": [
        36,
        36,
        36,
        255,
      ],
      "score": 0.5,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 16,
    "mode": "perceptual",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > linear gradient, gray, 256x16 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0625,
      "hex": "#484848",
      "hex8": "#484848ff",
      "position": {
        "x": 72,
        "y": 2,
      },
      "rank": 1,
      "rgba": [
        72,
        72,
        72,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#585858",
      "hex8": "#585858ff",
      "position": {
        "x": 88,
        "y": 2,
      },
      "rank": 2,
      "rgba": [
        88,
        88,
        88,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#686868",
      "hex8": "#686868ff",
      "position": {
        "x": 104,
        "y": 2,
      },
      "rank": 3,
      "rgba": [
        104,
        104,
        104,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#787878",
      "hex8": "#787878ff",
      "position": {
        "x": 120,
        "y": 2,
      },
      "rank": 4,
      "rgba": [
        120,
        120,
        120,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#888888",
      "hex8": "#888888ff",
      "position": {
        "x": 136,
        "y": 2,
      },
      "rank": 5,
      "rgba": [
        136,
        136,
        136,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#989898",
      "hex8": "#989898ff",
      "position": {
        "x": 152,
        "y": 2,
      },
      "rank": 6,
      "rgba": [
        152,
        152,
        152,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#a8a8a8",
      "hex8": "#a8a8a8ff",
      "position": {
        "x": 168,
        "y": 2,
      },
      "rank": 7,
      "rgba": [
        168,
        168,
        168,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#b8b8b8",
      "hex8": "#b8b8b8ff",
      "position": {
        "x": 184,
        "y": 2,
      },
      "rank": 8,
      "rgba": [
        184,
        184,
        184,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#c8c8c8",
      "hex8": "#c8c8c8ff",
      "position": {
        "x": 200,
        "y": 2,
      },
      "rank": 9,
      "rgba": [
        200,
        200,
        200,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#d8d8d8",
      "hex8": "#d8d8d8ff",
      "position": {
        "x": 216,
        "y": 2,
      },
      "rank": 10,
      "rgba": [
        216,
        216,
        216,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#e8e8e8",
      "hex8": "#e8e8e8ff",
      "position": {
        "x": 232,
        "y": 2,
      },
      "rank": 11,
      "rgba": [
        232,
        232,
        232,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0625,
      "hex": "#f8f8f8",
      "hex8": "#f8f8f8ff",
      "position": {
        "x": 248,
        "y": 2,
      },
      "rank": 12,
      "rgba": [
        248,
        248,
        248,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0313,
      "hex": "#0c0c0c",
      "hex8": "#0c0c0cff",
      "position": {
        "x": 12,
        "y": 2,
      },
      "rank": 13,
      "rgba": [
        12,
        12,
        12,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#141414",
      "hex8": "#141414ff",
      "position": {
        "x": 20,
        "y": 2,
      },
      "rank": 14,
      "rgba": [
        20,
        20,
        20,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#1c1c1c",
      "hex8": "#1c1c1cff",
      "position": {
        "x": 28,
        "y": 2,
      },
      "rank": 15,
      "rgba": [
        28,
        28,
        28,
        255,
      ],
      "score": 0.5,
    },
    {
      "coverage": 0.0313,
      "hex": "#242424",
      "hex8": "#242424ff",
      "position": {
        "x": 36,
        "y": 2,
      },
      "rank": 16,
      "rgba": [
        36,
        36,
        36,
        255,
      ],
      "score": 0.5,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 16,
    "mode": "population",
    "width": 256,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > many cells: 12x12 tiles with grain, seed 5, 240x240 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.0278,
      "hex": "#1aad44",
      "hex8": "#1aad44ff",
      "position": {
        "x": 28,
        "y": 162,
      },
      "rank": 1,
      "rgba": [
        26,
        173,
        68,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0278,
      "hex": "#ec1a83",
      "hex8": "#ec1a83ff",
      "position": {
        "x": 222,
        "y": 20,
      },
      "rank": 2,
      "rgba": [
        236,
        26,
        131,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0208,
      "hex": "#059898",
      "hex8": "#059898ff",
      "position": {
        "x": 5,
        "y": 142,
      },
      "rank": 3,
      "rgba": [
        5,
        152,
        152,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#1ac259",
      "hex8": "#1ac259ff",
      "position": {
        "x": 31,
        "y": 184,
      },
      "rank": 4,
      "rgba": [
        26,
        194,
        89,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#25648e",
      "hex8": "#25648eff",
      "position": {
        "x": 43,
        "y": 101,
      },
      "rank": 5,
      "rgba": [
        37,
        100,
        142,
        255,
      ],
      "score": 0.75,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 240,
    "mode": "perceptual",
    "width": 240,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > many cells: 12x12 tiles with grain, seed 5, 240x240 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0278,
      "hex": "#1aad44",
      "hex8": "#1aad44ff",
      "position": {
        "x": 28,
        "y": 162,
      },
      "rank": 1,
      "rgba": [
        26,
        173,
        68,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0278,
      "hex": "#ec1a83",
      "hex8": "#ec1a83ff",
      "position": {
        "x": 222,
        "y": 20,
      },
      "rank": 2,
      "rgba": [
        236,
        26,
        131,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0208,
      "hex": "#059898",
      "hex8": "#059898ff",
      "position": {
        "x": 5,
        "y": 142,
      },
      "rank": 3,
      "rgba": [
        5,
        152,
        152,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#1ac259",
      "hex8": "#1ac259ff",
      "position": {
        "x": 31,
        "y": 184,
      },
      "rank": 4,
      "rgba": [
        26,
        194,
        89,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#25648e",
      "hex8": "#25648eff",
      "position": {
        "x": 43,
        "y": 101,
      },
      "rank": 5,
      "rgba": [
        37,
        100,
        142,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#27123c",
      "hex8": "#27123cff",
      "position": {
        "x": 49,
        "y": 20,
      },
      "rank": 6,
      "rgba": [
        39,
        18,
        60,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#441ad7",
      "hex8": "#441ad7ff",
      "position": {
        "x": 66,
        "y": 23,
      },
      "rank": 7,
      "rgba": [
        68,
        26,
        215,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#6a2b16",
      "hex8": "#6a2b16ff",
      "position": {
        "x": 110,
        "y": 40,
      },
      "rank": 8,
      "rgba": [
        106,
        43,
        22,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#7e54d2",
      "hex8": "#7e54d2ff",
      "position": {
        "x": 127,
        "y": 80,
      },
      "rank": 9,
      "rgba": [
        126,
        84,
        210,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#7f1694",
      "hex8": "#7f1694ff",
      "position": {
        "x": 132,
        "y": 20,
      },
      "rank": 10,
      "rgba": [
        127,
        22,
        148,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#94162b",
      "hex8": "#94162bff",
      "position": {
        "x": 157,
        "y": 20,
      },
      "rank": 11,
      "rgba": [
        148,
        22,
        43,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#94e801",
      "hex8": "#94e801ff",
      "position": {
        "x": 143,
        "y": 222,
      },
      "rank": 12,
      "rgba": [
        148,
        232,
        1,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#e769d2",
      "hex8": "#e769d2ff",
      "position": {
        "x": 223,
        "y": 101,
      },
      "rank": 13,
      "rgba": [
        231,
        105,
        210,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#e7d23f",
      "hex8": "#e7d23fff",
      "position": {
        "x": 230,
        "y": 200,
      },
      "rank": 14,
      "rgba": [
        231,
        210,
        63,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0189,
      "hex": "#1414a7",
      "hex8": "#1414a7ff",
      "position": {
        "x": 23,
        "y": 20,
      },
      "rank": 15,
      "rgba": [
        20,
        20,
        167,
        255,
      ],
      "score": 0.6819,
    },
    {
      "coverage": 0.0186,
      "hex": "#64e2cd",
      "hex8": "#64e2cdff",
      "position": {
        "x": 110,
        "y": 223,
      },
      "rank": 16,
      "rgba": [
        100,
        226,
        205,
        255,
      ],
      "score": 0.6694,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 240,
    "mode": "perceptual",
    "width": 240,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > many cells: 12x12 tiles with grain, seed 5, 240x240 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.0278,
      "hex": "#1aad44",
      "hex8": "#1aad44ff",
      "position": {
        "x": 28,
        "y": 162,
      },
      "rank": 1,
      "rgba": [
        26,
        173,
        68,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0278,
      "hex": "#ec1a83",
      "hex8": "#ec1a83ff",
      "position": {
        "x": 222,
        "y": 20,
      },
      "rank": 2,
      "rgba": [
        236,
        26,
        131,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.0208,
      "hex": "#059898",
      "hex8": "#059898ff",
      "position": {
        "x": 5,
        "y": 142,
      },
      "rank": 3,
      "rgba": [
        5,
        152,
        152,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#1ac259",
      "hex8": "#1ac259ff",
      "position": {
        "x": 31,
        "y": 184,
      },
      "rank": 4,
      "rgba": [
        26,
        194,
        89,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#25648e",
      "hex8": "#25648eff",
      "position": {
        "x": 43,
        "y": 101,
      },
      "rank": 5,
      "rgba": [
        37,
        100,
        142,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#27123c",
      "hex8": "#27123cff",
      "position": {
        "x": 49,
        "y": 20,
      },
      "rank": 6,
      "rgba": [
        39,
        18,
        60,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#441ad7",
      "hex8": "#441ad7ff",
      "position": {
        "x": 66,
        "y": 23,
      },
      "rank": 7,
      "rgba": [
        68,
        26,
        215,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#6a2b16",
      "hex8": "#6a2b16ff",
      "position": {
        "x": 110,
        "y": 40,
      },
      "rank": 8,
      "rgba": [
        106,
        43,
        22,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#7e54d2",
      "hex8": "#7e54d2ff",
      "position": {
        "x": 127,
        "y": 80,
      },
      "rank": 9,
      "rgba": [
        126,
        84,
        210,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#7f1694",
      "hex8": "#7f1694ff",
      "position": {
        "x": 132,
        "y": 20,
      },
      "rank": 10,
      "rgba": [
        127,
        22,
        148,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#94162b",
      "hex8": "#94162bff",
      "position": {
        "x": 157,
        "y": 20,
      },
      "rank": 11,
      "rgba": [
        148,
        22,
        43,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#94e801",
      "hex8": "#94e801ff",
      "position": {
        "x": 143,
        "y": 222,
      },
      "rank": 12,
      "rgba": [
        148,
        232,
        1,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#e769d2",
      "hex8": "#e769d2ff",
      "position": {
        "x": 223,
        "y": 101,
      },
      "rank": 13,
      "rgba": [
        231,
        105,
        210,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0208,
      "hex": "#e7d23f",
      "hex8": "#e7d23fff",
      "position": {
        "x": 230,
        "y": 200,
      },
      "rank": 14,
      "rgba": [
        231,
        210,
        63,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.0189,
      "hex": "#1414a7",
      "hex8": "#1414a7ff",
      "position": {
        "x": 23,
        "y": 20,
      },
      "rank": 15,
      "rgba": [
        20,
        20,
        167,
        255,
      ],
      "score": 0.6819,
    },
    {
      "coverage": 0.0186,
      "hex": "#64e2cd",
      "hex8": "#64e2cdff",
      "position": {
        "x": 110,
        "y": 223,
      },
      "rank": 16,
      "rgba": [
        100,
        226,
        205,
        255,
      ],
      "score": 0.6694,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 240,
    "mode": "population",
    "width": 240,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > transparency mix: semi-transparent band, hidden region, 192x128 > default options 1`] = `
{
  "colors": [
    {
      "coverage": 0.2723,
      "hex": "#3b9da5",
      "hex8": "#3b9da5ff",
      "position": {
        "x": 44,
        "y": 45,
      },
      "rank": 1,
      "rgba": [
        59,
        157,
        165,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.2042,
      "hex": "#11adbe",
      "hex8": "#11adbeff",
      "position": {
        "x": 13,
        "y": 45,
      },
      "rank": 2,
      "rgba": [
        17,
        173,
        190,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.1588,
      "hex": "#618e8f",
      "hex8": "#618e8fff",
      "position": {
        "x": 73,
        "y": 45,
      },
      "rank": 3,
      "rgba": [
        97,
        142,
        143,
        255,
      ],
      "score": 0.5833,
    },
    {
      "coverage": 0.0908,
      "hex": "#778582",
      "hex8": "#778582ff",
      "position": {
        "x": 89,
        "y": 45,
      },
      "rank": 4,
      "rgba": [
        119,
        133,
        130,
        255,
      ],
      "score": 0.3333,
    },
    {
      "coverage": 0.0599,
      "hex": "#8e7d75",
      "hex8": "#8e7d75ff",
      "position": {
        "x": 106,
        "y": 45,
      },
      "rank": 5,
      "rgba": [
        142,
        125,
        117,
        255,
      ],
      "score": 0.2201,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 5,
    "height": 128,
    "mode": "perceptual",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > transparency mix: semi-transparent band, hidden region, 192x128 > mode perceptual, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.2723,
      "hex": "#3b9da5",
      "hex8": "#3b9da5ff",
      "position": {
        "x": 44,
        "y": 45,
      },
      "rank": 1,
      "rgba": [
        59,
        157,
        165,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.2042,
      "hex": "#11adbe",
      "hex8": "#11adbeff",
      "position": {
        "x": 13,
        "y": 45,
      },
      "rank": 2,
      "rgba": [
        17,
        173,
        190,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.1588,
      "hex": "#618e8f",
      "hex8": "#618e8fff",
      "position": {
        "x": 73,
        "y": 45,
      },
      "rank": 3,
      "rgba": [
        97,
        142,
        143,
        255,
      ],
      "score": 0.5833,
    },
    {
      "coverage": 0.0908,
      "hex": "#778582",
      "hex8": "#778582ff",
      "position": {
        "x": 89,
        "y": 45,
      },
      "rank": 4,
      "rgba": [
        119,
        133,
        130,
        255,
      ],
      "score": 0.3333,
    },
    {
      "coverage": 0.0599,
      "hex": "#8e7d75",
      "hex8": "#8e7d75ff",
      "position": {
        "x": 106,
        "y": 45,
      },
      "rank": 5,
      "rgba": [
        142,
        125,
        117,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0599,
      "hex": "#d6604a",
      "hex8": "#d6604aff",
      "position": {
        "x": 160,
        "y": 45,
      },
      "rank": 6,
      "rgba": [
        214,
        96,
        74,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0599,
      "hex": "#f2553a",
      "hex8": "#f2553aff",
      "position": {
        "x": 181,
        "y": 45,
      },
      "rank": 7,
      "rgba": [
        242,
        85,
        58,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0514,
      "hex": "#a87265",
      "hex8": "#a87265ff",
      "position": {
        "x": 126,
        "y": 45,
      },
      "rank": 8,
      "rgba": [
        168,
        114,
        101,
        255,
      ],
      "score": 0.1887,
    },
    {
      "coverage": 0.0428,
      "hex": "#be6a58",
      "hex8": "#be6a58ff",
      "position": {
        "x": 142,
        "y": 45,
      },
      "rank": 9,
      "rgba": [
        190,
        106,
        88,
        255,
      ],
      "score": 0.1572,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "perceptual",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;

exports[`determinism of extractColorsFromPixels on synthetic images > transparency mix: semi-transparent band, hidden region, 192x128 > mode population, count 16 1`] = `
{
  "colors": [
    {
      "coverage": 0.2723,
      "hex": "#3b9da5",
      "hex8": "#3b9da5ff",
      "position": {
        "x": 44,
        "y": 45,
      },
      "rank": 1,
      "rgba": [
        59,
        157,
        165,
        255,
      ],
      "score": 1,
    },
    {
      "coverage": 0.2042,
      "hex": "#11adbe",
      "hex8": "#11adbeff",
      "position": {
        "x": 13,
        "y": 45,
      },
      "rank": 2,
      "rgba": [
        17,
        173,
        190,
        255,
      ],
      "score": 0.75,
    },
    {
      "coverage": 0.1588,
      "hex": "#618e8f",
      "hex8": "#618e8fff",
      "position": {
        "x": 73,
        "y": 45,
      },
      "rank": 3,
      "rgba": [
        97,
        142,
        143,
        255,
      ],
      "score": 0.5833,
    },
    {
      "coverage": 0.0908,
      "hex": "#778582",
      "hex8": "#778582ff",
      "position": {
        "x": 89,
        "y": 45,
      },
      "rank": 4,
      "rgba": [
        119,
        133,
        130,
        255,
      ],
      "score": 0.3333,
    },
    {
      "coverage": 0.0599,
      "hex": "#8e7d75",
      "hex8": "#8e7d75ff",
      "position": {
        "x": 106,
        "y": 45,
      },
      "rank": 5,
      "rgba": [
        142,
        125,
        117,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0599,
      "hex": "#d6604a",
      "hex8": "#d6604aff",
      "position": {
        "x": 160,
        "y": 45,
      },
      "rank": 6,
      "rgba": [
        214,
        96,
        74,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0599,
      "hex": "#f2553a",
      "hex8": "#f2553aff",
      "position": {
        "x": 181,
        "y": 45,
      },
      "rank": 7,
      "rgba": [
        242,
        85,
        58,
        255,
      ],
      "score": 0.2201,
    },
    {
      "coverage": 0.0514,
      "hex": "#a87265",
      "hex8": "#a87265ff",
      "position": {
        "x": 126,
        "y": 45,
      },
      "rank": 8,
      "rgba": [
        168,
        114,
        101,
        255,
      ],
      "score": 0.1887,
    },
    {
      "coverage": 0.0428,
      "hex": "#be6a58",
      "hex8": "#be6a58ff",
      "position": {
        "x": 142,
        "y": 45,
      },
      "rank": 9,
      "rgba": [
        190,
        106,
        88,
        255,
      ],
      "score": 0.1572,
    },
  ],
  "meta": {
    "algorithmVersion": "1-population-only",
    "count": 16,
    "height": 128,
    "mode": "population",
    "width": 192,
  },
  "schemaVersion": 1,
}
`;
